11-05-2020 - feedback solved and alignment changed

--- a/public/assets/css/template1.css
+++ b/public/assets/css/template1.css
@@ -1649,7 +1649,9 @@ margin-left: 1rem !important;
     text-align: right;
 }
 
-.ar-lang .profile-wrapper.content-wrapper .items-container .media h5{
+.ar-lang .profile-wrapper.content-wrapper .items-container .media h5,
+.ar-lang .orders-wrapper.content-wrapper .items-container .media h5
+{
     text-align: right;
     margin-right: 1rem !important;
     margin-left: 0 !important;
